rules/weight-python-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-python
spec: 
  hosts:
    - helloworld-python
  http:
  - route:
    - destination:
        host: helloworld-python
        subset: v1
      weight: 30
    - destination:
        host: helloworld-python
        subset: v2
      weight: 70
